# rust-raytracing-in-one-weekend

./: Cargo.toml  rustfmt.toml
src/: aabb.rs  bvh.rs  camera.rs  canvas.rs  main.rs  material.rs  material2.rs  object.rs  ray.rs  simd.rs  texture.rs  vec3.rs  vec3_scalar.rs
